Pom change to prevent Test related Maven execution. Thereby no longer causing build failures.