@@ -51,6 +51,7 @@
                     <includes>
                         <include>**/ObjectDiffTestSuite.class</include>
                     </includes>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
                 <dependencies>
                     <dependency>
